--- a/style.css
+++ b/style.css
@@ -2,15 +2,22 @@
     padding 0;
     margin: 0;
     box-sizing: border-box;
-    border: rgb(225,225,225);
-}
+}    
+    
 /* ------- Temporary styles for structural html ---------- */
+
+* {
+    padding: 0.5rem;
+    border: 2px solid rgb(225,225,225);
+}
 
 html {
     border: none;
 }
 
 body {
+    border: none;
     font-family: 'Red Hat Display', sans-serif;
+    
 
 }
