complete html & css

--- a/style.css
+++ b/style.css
@@ -2,38 +2,137 @@
     padding 0;
     margin: 0;
     box-sizing: border-box;
-}    
+} 
     
 /* ------- Temporary styles for structural html ---------- */
 
-* {
+/*section {
     padding: 0.5rem;
     border: 2px solid rgb(225,225,225);
 }
 
 html {
     border: none;
-}
-
-body {
-    border: none;
-    font-family: 'Red Hat Display', sans-serif;
-}
+}*/
 
 /* Image styles */
-
 .bg-image {
     background-image: url('images/surfcoaching-bol5.jpg');
     background-size: cover;
-    min-height: 100vh;
+    min-height: 10rem;
 }
 
 /* Background Images */
-
-.bg-wave {
-    background-image: url('/images/surfcoaching-bol4.jpg')
+.bg-portrait {
+    background-image: url('/images/surfcoaching-bol6.jpg');
+    background-position: 50% 10%;
+}
+.bg-surfing {
+    background-image: url('/images/surfcoaching-bol3.jpg');
+    background-position: 50% 100%;
 }
 
-/* Universal styles & utility classes */
+.bg-wave {
+    background-image: url('/images/surfcoaching-bol7.jpg');
+    background-position: 50% 60%;
+}
+
+/*--Universal styles & utility classes */
+body {
+    border: none;
+    font-family: 'Red Hat Display', sans-serif;
+    color: #2f2504
+}
+.padded    { padding: 5%;   }
+.padded-sm { padding: 1rem; }
+.padded-lg { padding: 10%;  }
+
+.bg-dark {
+    background-color: #2f2504;
+    color: white;
+}
+
+.tall-70  { min-height: 70vh;  }
+.tall-80  { min-height: 80vh;  }
+.tall-90  { min-height: 90vh;  }
+.tall-100 { min-height: 100vh; }
+
+/* Typography Styles */
+h2 {
+    font-size: 2.5rem;
+    line-height: 1.1;
+    margin-bottom: 1rem;
+}
+
+h3 { 
+    line-height: 1;
+    margin-top: 1.5rem;
+}
+
+p {
+    font-weight: 300;
+    margin-bottom; 1rem;
+}
+
+p:last-child {
+    margin-bottom: 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;   
+}
+
+a:hover { color: #A3CB38; }
+
+.featured-text { color:#A3CB38; }
+.blue-text     { color: #2f4858;}
+.white-text    {color: white;   }
+
+.small-text  { font-size: 1.9rem; }
+.medium-text {
+    font-size: 1.7rem;
+    line-height: 1.5;
+}
+.big-text    { font-size: 4rem;}
+
+.subtitle {
+    font-size: 1rem;
+    color: rgb(120,120,125);
+    margin-top: 1rem;
+}
+
+.quote-icon {
+    font-size: 6rem;
+    display: inline-block;
+    color: rgb(120,120,125);
+    line-height: 1;
+}
+
+.font-weight-light      { font-weight: 300;    }
+.font-weight-normal     { font-weight: normal; }
+.font-weight-semi-bold  { font-weight: 500;    }
+.font-weight-extra-bold { font-weight: 800;    }
+
+.text-left   { text-align: left;   }
+.text-center { text-align: center; }
+.text-right  { text-align: right;  }
+
+/* Header & Footer Styles*/
+
+header h3 {
+    font-size: 5.5rem;
+    line-height: 1.2;
+}
+
+/* Icon Grid */
+.fas {
+    display: block;
+    text-align: center;
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+
 
 
