--- a/style.css
+++ b/style.css
@@ -75,7 +75,8 @@ h3 {
 
 p {
     font-weight: 300;
-    margin-bottom: 1rem;
+    margin-bottom: 0rem;
+    line-height: 1.4;
 }
 
 p:last-child {
@@ -84,7 +85,7 @@ p:last-child {
 
 a {
     color: inherit;
-    text-decoration: none;   
+    text-decoration: none;
 }
 
 a:hover { color: #A3CB38; }
