margin-0 in footer links

--- a/style.css
+++ b/style.css
@@ -56,6 +56,10 @@ body {
     color: white;
 }
 
+.margin-0 {
+    margin: 0;
+}
+
 .tall-70  { min-height: 70vh;  }
 .tall-80  { min-height: 80vh;  }
 .tall-90  { min-height: 90vh;  }
