--- a/style.css
+++ b/style.css
@@ -128,6 +128,51 @@ footer a:hover { color: #A3CB38; }
 .text-right  { text-align: right;  }
 
 /* Header & Footer Styles*/
+header {
+    padding: 1% 5%;
+    
+  }
+  
+  header a {
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+    padding: 1%;
+    
+  }
+  
+  header a:hover {
+    color: #A3CB38;
+  }
+  
+  .emphasis-button {
+    color: white;
+    border: 2px solid #2f2504;
+    background-color: #2f2504;
+    padding: 0.5rem 1.5rem;
+    margin-left: 0.5rem;
+    transition: all 0.2s;
+  }
+  
+  .emphasis-button:hover {
+    color: white;
+    background-color: #A3CB38;
+    border: 2px solid #A3CB38;
+  }
+  
+  .right {
+    text-align: right;
+  }
+  
+  .logo-h1 {
+    font-size: 1.5rem;
+    color: white;
+  }
+  
+  .logo {
+    font-size: 2rem;
+    color: #2f2504;
+  }
 
 header h3 {
     font-size: 5.5rem;
