--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
 /* Typography Styles */
 h2 {
     font-size: 2.5rem;
-    line-height: 0.1;
+    line-height: 0.5;
     margin-bottom: 1rem;
 }
 
@@ -132,6 +132,7 @@ header a {
     display: inline-block;
     text-decoration: none;
     color: inherit;
+    font-size: 1.2rem;
     padding: 1%;
     
   }
