--- a/style.css
+++ b/style.css
@@ -143,17 +143,17 @@ header a:hover {
   
 .emphasis-button {
     color: white;
-    border: 2px solid #2f2504;
-    background-color: #2f2504;
+    border: 2px solid #A3CB38;
+    background-color: #A3CB38;
     padding: 0.5rem 1.5rem;
     margin-left: 0.5rem;
     transition: all 0.2s;
   }
   
 .emphasis-button:hover {
-    color: white;
-    background-color: #A3CB38;
-    border: 2px solid #A3CB38;
+    color: #A3CB38;
+    background-color: white;
+    border: 2px solid white;
   }
   
 .right {
