--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     margin: 0;
     box-sizing: border-box;
 } 
+
+[class*"col-"] { padding: 0;}
     
 /* ------- Temporary styles for structural html ---------- */
 
