--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@ body {
 .tall-90  { min-height: 90vh;  }
 .tall-100 { min-height: 100vh; }
 
+.col-4 { flex-basis: 70%;}
+
 /* Typography Styles */
 h2 {
     font-size: 2.5rem;
