--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
 .padded    { padding: 5%;   }
 .padded-sm { padding: 1rem; }
 .padded-lg { padding: 10%;  }
+.padded-t-0 { padding-top: 0}
 
 .bg-dark {
     background-color: #2f2504;
