--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
 .margin-0 {
     margin: 0;
 }
+.margin-t-0 { margin-top: 0 }
 
 .tall-70  { min-height: 70vh;  }
 .tall-80  { min-height: 80vh;  }
