--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ body {
 
 
 /* Typography Styles */
+h1 { margin-top: 0; }
 h2 {
     font-size: 2.5rem;
     line-height: 1.2;
@@ -79,7 +80,7 @@ h2 {
 
 h3 { 
     line-height: 1;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 
 p {
