--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ body {
 .margin-0 {
     margin: 0;
 }
-.margin-t-0 { margin-top: 0 }
+.margin-t-0 { margin-top: 0; }
+.margin-b-05 {margin-bottom: 0.5rem; }
 
 .tall-70  { min-height: 70vh;  }
 .tall-80  { min-height: 80vh;  }
@@ -71,7 +72,6 @@ body {
 
 
 /* Typography Styles */
-h1 { margin-top: 0; }
 h2 {
     font-size: 2.5rem;
     line-height: 1.2;
