--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
     margin: 0;
 }
 .margin-t-0 { margin-top: 0; }
-.margin-b-05 {margin-bottom: 0.5rem; }
+.margin-b-0 {margin-bottom: 0; }
 
 .tall-70  { min-height: 70vh;  }
 .tall-80  { min-height: 80vh;  }
